fix(SelectPanel): update input fontSize to 16 on small viewports

--- a/packages/react/src/FilteredActionList/FilteredActionList.module.css
+++ b/packages/react/src/FilteredActionList/FilteredActionList.module.css
@@ -4,3 +4,9 @@
   overflow: auto;
   flex-grow: 1;
 }
+
+.FullScreenTextInput {
+  @media screen and (--viewportRange-narrow) {
+    font-size: var(--text-title-size-small);
+  }
+}
